Phase 2: Add seeder, pagination, dashboard, optimistic updates